--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1"
   }
 }
